--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
+    "geolib": "^3.3.4",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "react": "18.2.0",
